--- a/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -43,7 +43,13 @@
 
 <button></button>
 <script>
+  const divs = document.querySelectorAll('div');
+  function logtext(e) {
+    console.log(this.classList.value);
+    e.stopPropagation();
+  }
 
+  divs.forEach(div => div.addEventListener('click', logText));
 </script>
 </body>
 </html>
